CHanged Image URL

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </head>
     <body>
         <h3>Perfect for a "Family Craft Night" or gift idea! Make "Self-Care Time" more meaningful!</h3>
-<img src ="The-Best-Candle-Making-Kit-Option-650x460.jpg">
+<img src ="./The-Best-Candle-Making-Kit-Option-650x460.jpg">
 <a href="https://www.amazon.com/Complete-Beginners-Supplies-Including-Essential/dp/B07KB8MRBV" target="_blank">Photo:Amazon.com</a>
 </body>
     
